sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:16: error: not found: value i
while ((ecart > 1) || (i !=0))
                       ^